Add links to demos

--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
 					<textarea data-template>
 						<img class="clean" src="https://webrtc.org/assets/images/webrtc-logo-horiz-retro-750x140.png" />
 						#### Demo time - getUserMedia
+						[getUserMedia Demo Code](https://codepen.io/vydimitrov/pen/yQMMqw?editors=1010)
+					</textarea>
+				</section>
+				<section data-markdown data-background-color="black" data-state="faded">
+					<textarea data-template>
+						<img class="clean" src="https://webrtc.org/assets/images/webrtc-logo-horiz-retro-750x140.png" />
+						#### Demo time - getUserMedia
+						[Instacam Demo Code](https://codepen.io/vydimitrov/pen/RqKvyq?editors=1010)
 					</textarea>
 				</section>
 				<section data-markdown data-background-color="#eb4d98" data-state="faded">
